force-app/main/default/objects/Lectura_contador__c/Lectura_contador__c.object-meta.xml
<CustomObject>
    <description>Lecturas relacionadas con la dirección de entrega</description>
    <label>Lectura contador</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Lectura contador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lecturas contador</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>