force-app/main/default/objects/Lectura_contador__c/fields/Direccion_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Direccion_de_entrega__c</fullName>
    <label>Dirección de entrega</label>
    <referenceTo>Direcci_n_de_entrega__c</referenceTo>
    <relationshipLabel>Lecturas contador</relationshipLabel>
    <relationshipName>Lecturas_contador</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>