force-app/main/default/objects/Lectura_contador__c/fields/Id_Navision_Direccion_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Id_Navision_Direccion_de_entrega__c</fullName>
    <description>Campo utilizado para parsear la respuesta recibida al consultar las lecturas de Navision.</description>
    <label>Id Navision Direccion de entrega</label>
    <length>50</length>
    <type>Text</type>
</CustomField>