force-app/main/default/objects/Lectura_contador__c/fields/Lectura__c.field-meta.xml
<CustomField>
    <fullName>Lectura__c</fullName>
    <label>Lectura</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>