force-app/main/default/objects/Lectura_contador__c/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <label>Origen</label>
    <length>200</length>
    <type>Text</type>
</CustomField>