force-app/main/default/objects/Lectura_contador__c/fields/Ultima_lectura__c.field-meta.xml
<CustomField>
    <fullName>Ultima_lectura__c</fullName>
    <label>Última lectura</label>
    <type>Date</type>
</CustomField>